# ai-mcp-examples

./: .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
examples/multi_server_http/: Containerfile  README.md  __main__.py  pyproject.toml  server_test.py
examples/multi_server_http/puppeteer/: server.py
examples/multi_server_http/server/: fastapi_server.py  fastmcp_server.py
examples/multi_server_http/shared/: transports.py
examples/puppeteer_stdio/: Containerfile  README.md  __main__.py  entrypoint.sh  fastmcp_server.py  pyproject.toml  server_test.py
src/fastmcp/client/: __init__.py
