[project]
name = "ai-mcp-examples"
version = "0.1.0"
description = "MCP examples"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "fastmcp>=2.4.0",
    "mcp[cli]>=1.9.1",
    "pydantic>=2.11.4",
]


[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.8",
]
